syntax = "proto3";

package pb;

option go_package = "github.com/jakub/aioportal/server/pb";

message Portfolio {
  int64 id = 1;
  int64 account_id = 2;
  string name = 3;
  int32 holdings = 4;
  int32 change_24h = 5;
  int32 profit_loss = 6;
}